--- a/public/chat.html
+++ b/public/chat.html
@@ -21,16 +21,16 @@
 
       <label>Choose a group to join</label>
       <label for="cooking" class="category-item">
-        <input id="cooking" type="radio" name="group" value="javascript"> Javascript
+        <input id="cooking" type="radio" name="group" value="Javascript"> Javascript
       </label>
       <label for="node" class="category-item">
-        <input id="node" type="radio" name="group" value="node"> Node.js
+        <input id="node" type="radio" name="group" value="Node.js"> Node.js
       </label>
       <label for="deno" class="category-item">
-        <input id="deno" type="radio" name="group" value="deno"> Deno
+        <input id="deno" type="radio" name="group" value="Deno"> Deno
       </label>
       <label for="php" class="category-item">
-        <input id="php" type="radio" name="group" value="php"> PHP
+        <input id="php" type="radio" name="group" value="PHP"> PHP
       </label>
     </div>
     <div class="form-footer">
